helper_scripts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 2fa-helpdesk-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 2fa-helpdesk-backend
  template:
    metadata:
      labels:
        app: 2fa-helpdesk-backend
    spec:
      containers:
      - name: 2fa-helpdesk-backend
        image: 2fa-helpdesk-backend
