helper_scripts/service.yaml
# SPDX-License-Identifier: AGPL-3.0-only
# SPDX-FileCopyrightText: 2025 Univention GmbH

apiVersion: v1
kind: Service
metadata:
  name: twofa-helpdesk-service
spec:
  selector:
    app: 2fa-helpdesk-backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
